Cascade_Git_Test2/src/objects/Airplanes__c.object
<CustomObject>
    <fields>
        <fullName>Base_Fare__c</fullName>
        <defaultValue>100.00</defaultValue>
        <description>Base fair for air travel to any destination.</description>
        <label>Base Fare</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Card__c</fullName>
        <description>Credit Card Number</description>
        <label>Credit Card</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Flight_Hours__c</fullName>
        <description>Number of hours flown by aircraft.</description>
        <inlineHelpText>Record the number of hours flown by aircraft.</inlineHelpText>
        <label>Flight Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fuel_Use__c</fullName>
        <inlineHelpText>Fuel used in Gallons Annually</inlineHelpText>
        <label>Annual Fuel Use</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Test__c</fullName>
        <description>Testing this feature on a custom object</description>
        <globalPicklist>Global_Test</globalPicklist>
        <label>Global Test</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Identifying Model of Aircraft</description>
        <inlineHelpText>Select the model of Aircraft</inlineHelpText>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>Cesna Twin Engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boeing 737</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boeing 747</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boeing 757</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Supplies__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supply Order for flight crew.</description>
        <inlineHelpText>Identifies the supply order for flight crew.</inlineHelpText>
        <label>Office Supplies</label>
        <referenceTo>Office_Supplies__c</referenceTo>
        <relationshipLabel>Airplanes</relationshipLabel>
        <relationshipName>Airplanes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pilot_Phone__c</fullName>
        <description>Secure Cell Phone for Pilot</description>
        <encrypted>true</encrypted>
        <label>Pilot Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Hub__c</fullName>
        <label>Primary Hub</label>
        <picklist>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <description>Purchase Order associated with supplies for this Airplane</description>
        <formula>Office_Supplies__r.Purchase_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Purchase Order associated with supplies for this Airplane</inlineHelpText>
        <label>Purchase Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Crew__c</fullName>
        <label>Regional Crew</label>
        <picklist>
            <controllingField>Primary_Hub__c</controllingField>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Text__c</fullName>
        <description>Test field for confirming data dictionary results</description>
        <inlineHelpText>Test, Test</inlineHelpText>
        <label>Test Text</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Airplanes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Marketing_View</fullName>
        <columns>NAME</columns>
        <columns>Flight_Hours__c</columns>
        <columns>Model__c</columns>
        <columns>Purchase_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flight_Hours__c</field>
            <operation>lessThan</operation>
            <value>10000</value>
        </filters>
        <label>Marketing View</label>
    </listViews>
    <listViews>
        <fullName>Mechanics_View</fullName>
        <columns>NAME</columns>
        <columns>Flight_Hours__c</columns>
        <columns>Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flight_Hours__c</field>
            <operation>greaterThan</operation>
            <value>50000</value>
        </filters>
        <label>Mechanics View</label>
    </listViews>
    <listViews>
        <fullName>Test_Queue_Airplanes</fullName>
        <filterScope>Queue</filterScope>
        <label>Test Queue</label>
        <queue>Test_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Airplanes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airplanes</pluralLabel>
    <recordTypes>
        <fullName>California_User</fullName>
        <active>true</active>
        <description>Record Type used for the California User profile</description>
        <label>California User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Georgia_Users</fullName>
        <active>true</active>
        <description>Record Type used for the Georgia User Profile</description>
        <label>Georgia Users</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Flight_Hours_May_Only_be_increased</fullName>
        <active>true</active>
        <description>Flight hours may only be increased, not decreased.</description>
        <errorConditionFormula>PRIORVALUE( Flight_Hours__c )  &gt;  Flight_Hours__c</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You may not decrease the number of flight hours on record.</errorMessage>
    </validationRules>
</CustomObject>